post are made. content need to be changed though. Corrected error of z-index in nav bar

--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -1,13 +1,15 @@
 .top {
   width: 100%;
   height: 50px;
-  background-color: white;
+  background-color: rgb(245, 242, 242);
   position: sticky;
   top: 0;
   display: flex; 
   align-items: center;
   justify-content: space-between;
   font-family: "Josefin Sans", sans-serif;
+  padding-bottom: 10px;
+  z-index: +100;
 }
 
 .navLeft {
