--- a/src/posts/posts.css
+++ b/src/posts/posts.css
@@ -1,3 +1,7 @@
-.posts{
-    flex: 3;
+.posts {
+  flex: 3;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap:20px;
 }
